Update index.html as navigation page for all dashboards

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>上海无人机配送数据总览</title>
+    <title>数据可视化仪表板集合</title>
     <style>
         * {
             margin: 0;
